--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
         <div class="video">
             <div class="video-title">Новая линейка<br />светодиодных МФУ</div>
             <div class="videoWrapper">
-                <video width="480" height="270" preload="none"><source src="images/Ricoh - Gimlet ProductVideo_RU_t_80-81636.mp4" type="video/mp4" /></video>
+                <video width="594" height="334" preload="none"><source src="images/Ricoh - Gimlet ProductVideo_RU_t_80-81636.mp4" type="video/mp4" /></video>
             </div>
+            <div class="video-link"></div>
         </div>
         <!-- video END -->
 
