--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@
         </div>
         <!-- products END -->
 
+        <!-- first 10 -->
+        <div class="first-10">
+            <div class="first-10-text-1"><span>Первые 10 партнеров</span> второго уровня,<br />разместившие заказ на новые МФУ с 18 мая по 30 июня 2015 года</div>
+            <div class="first-10-text-2">Бесплатно получают картридж<br />повышенной ёмкости</div>
+            <div class="first-10-free">Бесплатно!</div>
+        </div>
+        <!-- first 10 END -->
+
         <script type="text/javascript">
             videoplayer_options = {
                 'swf': 'images/videoplayer-80-10548.swf',
